syntax = "proto3";

package cat;

option go_package='./pb';

message Cat {
  string id = 1;
  int64 createAt = 2;
  string age = 3;
  string communityId = 4;
  string color = 5;
  string details = 6;
  string name = 7;
  int64 popularity = 8;
  string sex = 9;
  int64 status = 10;
  string area = 11;
  bool isSnipped = 12;
  bool isSterilized = 13;
  repeated string avatars = 14;
}

message SearchCatReq {
  int64 count = 1; // 获取的数量
  int64 skip=2;//跳过前skip个
  string communityId = 3;
  string keyword = 4;
}

message SearchCatResp {
  repeated Cat cats = 1;
  int64 count = 2;
}

message ListCatReq {
  string communityId = 1;
  int64 count = 2; // 获取的数量
  int64 skip=3;//跳过前skip个
}

message ListCatResp {
  repeated Cat cats = 1;
  int64 count=2;
}

message RetrieveCatReq {
  string catId = 1;
}

message RetrieveCatResp {
  Cat cat = 1;
}

message CreateCatReq {
  Cat cat = 1;
}

message CreateCatResp {
  string catId = 1;
}

message UpdateCatReq {
  Cat cat = 1;
}

message UpdateCatResp {
}

message DeleteCatReq {
  string catId = 1;
}

message DeleteCatResp {
}

service collection_rpc {
  rpc SearchCat(SearchCatReq) returns (SearchCatResp);
  rpc ListCat(ListCatReq) returns (ListCatResp);
  rpc RetrieveCat(RetrieveCatReq) returns (RetrieveCatResp);
  rpc CreateCat(CreateCatReq) returns (CreateCatResp);
  rpc UpdateCat(UpdateCatReq) returns (UpdateCatResp);
  rpc DeleteCat(DeleteCatReq) returns (DeleteCatResp);
}